--- a/NFT_Omega.html
+++ b/NFT_Omega.html
@@ -33,6 +33,10 @@
 </head>
 
 <body>
+    <div id="preload" class="soccer_loading">
+    <img src="./assets/img/football.gif" />
+    </div>
+<div id="soccer">
     <!--Mian Body Area Start-->
 
     <!--Header Here-->
@@ -61,7 +65,7 @@
                             </a>
                         </li>
                         <li style="margin-right:40px">
-                            <a href="livecasino.html">
+                            <a href="week.html">
                                 <span>Weekly
                                 </span>
                             </a>
@@ -107,7 +111,7 @@
         </div>
     </header>
 
-    <section class="main__body__area">
+    <section class="main__body__area" >
         <div class="container">
             <div class="row g-0">
                 <div class="casino__tab__area">
@@ -1761,15 +1765,15 @@
         <!--footer Bottom Menu-->
         <ul class="footer__menu d-lg-none">
             <li>
-                <a href="sportsbetting.html" class="d-grid justify-content-center">
+                <a href="index.html" class="d-grid justify-content-center">
                     <span><i class="fas fa-table-tennis"></i></span>
-                    <span class="texta">Sports</span>
+                    <span class="texta">Home</span>
                 </a>
             </li>
             <li>
-                <a href="#0" class="d-grid justify-content-center" data-bs-toggle="modal" data-bs-target="#eventsp">
+                <a href="NFT_Omega.html" class="d-grid justify-content-center">
                     <span><i class="fa-solid fa-gift"></i></span>
-                    <span class="texta">Events</span>
+                    <span class="texta">NFT</span>
                 </a>
             </li>
             <li class="header-bartwo d-lg-none">
@@ -1783,9 +1787,9 @@
                 </a>
             </li>
             <li>
-                <a href="/" class="d-grid justify-content-center">
+                <a href="/transaction.html" class="d-grid justify-content-center">
                     <span> <i class="far fa-user-circle"></i></span>
-                    <span class="texta"> Account</span>
+                    <span class="texta"> History</span>
                 </a>
             </li>
         </ul>
@@ -1866,7 +1870,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="livecasino.html">
+                                        <a href="week.html">
                                             <img src="assets/img/footer/rightarrow.png" alt="angle"> Live Games
                                         </a>
                                     </li>
@@ -2681,7 +2685,7 @@
     <!--Main js-->
     <script src="assets/js/main.js"></script>
 
-</body>
+</div></body>
 
 <!-- Mirrored from pixner.net/sportsodds/sportsbet/casino.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 15 Mar 2023 16:12:51 GMT -->
 
