--- a/bethistory.html
+++ b/bethistory.html
@@ -60,7 +60,7 @@
                             </a>
                         </li>
                         <li style="margin-right:40px">
-                            <a href="livecasino.html">
+                            <a href="week.html">
                                 <span>Weekly
                                 </span>
                             </a>
@@ -163,16 +163,7 @@
                                     </span>
                                 </a>
                             </li>
-                            <li>
-                                <a href="bonuses.html">
-                                    <span class="icons">
-                                        <i class="icon-bonus"></i>
-                                    </span>
-                                    <span>
-                                        Bonuses
-                                    </span>
-                                </a>
-                            </li>
+                            
                             <li>
                                 <a href="#0">
                                     <span class="icons">
@@ -273,15 +264,15 @@
         <!--footer Bottom Menu-->
         <ul class="footer__menu d-lg-none">
             <li>
-                <a href="sportsbetting.html" class="d-grid justify-content-center">
+                <a href="index.html" class="d-grid justify-content-center">
                     <span><i class="fas fa-table-tennis"></i></span>
-                    <span class="texta">Sports</span>
+                    <span class="texta">Home</span>
                 </a>
             </li>
             <li>
-                <a href="#0" class="d-grid justify-content-center" data-bs-toggle="modal" data-bs-target="#eventsp">
+                <a href="NFT_Omega.html" class="d-grid justify-content-center">
                     <span><i class="fa-solid fa-gift"></i></span>
-                    <span class="texta">Events</span>
+                    <span class="texta">NFT</span>
                 </a>
             </li>
             <li class="header-bartwo d-lg-none">
@@ -295,9 +286,9 @@
                 </a>
             </li>
             <li>
-                <a href="/" class="d-grid justify-content-center">
+                <a href="/transaction.html" class="d-grid justify-content-center">
                     <span> <i class="far fa-user-circle"></i></span>
-                    <span class="texta"> Account</span>
+                    <span class="texta"> History</span>
                 </a>
             </li>
         </ul>
@@ -378,7 +369,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="livecasino.html">
+                                        <a href="week.html">
                                             <img src="assets/img/footer/rightarrow.png" alt="angle"> Live Games
                                         </a>
                                     </li>
