--- a/betslipcheck.html
+++ b/betslipcheck.html
@@ -89,7 +89,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="livecasino.html">
+                            <a href="week.html">
                                 <span>Live Casino</span>
                             </a>
                         </li>
@@ -9722,7 +9722,7 @@
                                                                                     </a>
                                                                                 </li>
                                                                                 <li>
-                                                                                    <a href="livecasino.html">
+                                                                                    <a href="week.html">
                                                                                     <img src="assets/img/footer/rightarrow.png" alt="angle"> Live Betting
                                                                                     </a>
                                                                                 </li>
@@ -9833,7 +9833,7 @@
                                                                                 </a>
                                                                             </li>
                                                                             <li>
-                                                                                <a href="livecasino.html">
+                                                                                <a href="week.html">
                                                                                 <img src="assets/img/footer/rightarrow.png" alt="angle"> All Live Casino
                                                                                 </a>
                                                                             </li>
