--- a/bonuses.html
+++ b/bonuses.html
@@ -59,7 +59,7 @@
                             </a>
                         </li>
                         <li style="margin-right:40px">
-                            <a href="livecasino.html">
+                            <a href="week.html">
                                 <span>Weekly
                                 </span>
                             </a>
@@ -389,7 +389,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="livecasino.html">
+                                    <a href="week.html">
                                     <img src="assets/img/footer/rightarrow.png" alt="angle"> Live Games
                                     </a>
                                 </li>
