--- a/livecasino.html
+++ b/livecasino.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from pixner.net/sportsodds/sportsbet/livecasino.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 15 Mar 2023 16:12:51 GMT -->
+<!-- Mirrored from pixner.net/sportsodds/sportsbet/week.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 15 Mar 2023 16:12:51 GMT -->
 
-<!-- Mirrored from bluegreen.financial/livecasino.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 11 Apr 2023 09:54:46 GMT -->
+<!-- Mirrored from bluegreen.financial/week.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 11 Apr 2023 09:54:46 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -73,7 +73,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="livecasino.html">
+                            <a href="week.html">
                                 <span>Vault Affiliate Program 
                                 </span>
                             </a>
@@ -2992,7 +2992,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="livecasino.html">
+                                    <a href="week.html">
                                     <img src="assets/img/footer/rightarrow.png" alt="angle"> Live Games
                                     </a>
                                 </li>
@@ -3759,7 +3759,7 @@
     
 </body>
 
-<!-- Mirrored from pixner.net/sportsodds/sportsbet/livecasino.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 15 Mar 2023 16:12:51 GMT -->
+<!-- Mirrored from pixner.net/sportsodds/sportsbet/week.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 15 Mar 2023 16:12:51 GMT -->
 
-<!-- Mirrored from bluegreen.financial/livecasino.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 11 Apr 2023 09:56:10 GMT -->
+<!-- Mirrored from bluegreen.financial/week.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 11 Apr 2023 09:56:10 GMT -->
 </html>
