--- a/lives.html
+++ b/lives.html
@@ -88,7 +88,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="livecasino.html">
+                            <a href="week.html">
                                 <span>Live Casino</span>
                             </a>
                         </li>
@@ -26683,7 +26683,7 @@
                                                                                     </a>
                                                                                 </li>
                                                                                 <li>
-                                                                                    <a href="livecasino.html">
+                                                                                    <a href="week.html">
                                                                                     <img src="assets/img/footer/rightarrow.png" alt="angle"> Live Betting
                                                                                     </a>
                                                                                 </li>
@@ -26794,7 +26794,7 @@
                                                                                 </a>
                                                                             </li>
                                                                             <li>
-                                                                                <a href="livecasino.html">
+                                                                                <a href="week.html">
                                                                                 <img src="assets/img/footer/rightarrow.png" alt="angle"> All Live Casino
                                                                                 </a>
                                                                             </li>
