--- a/mybet.html
+++ b/mybet.html
@@ -61,7 +61,7 @@
                             </a>
                         </li>
                         <li style="margin-right:40px">
-                            <a href="livecasino.html">
+                            <a href="week.html">
                                 <span>Weekly
                                 </span>
                             </a>
@@ -365,7 +365,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="livecasino.html">
+                                        <a href="week.html">
                                             <img src="assets/img/footer/rightarrow.png" alt="angle"> Live Games
                                         </a>
                                     </li>
