--- a/sportsbetting.html
+++ b/sportsbetting.html
@@ -73,7 +73,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="livecasino.html">
+                            <a href="week.html">
                                 <span>Vault Affiliate Program 
                                 </span>
                             </a>
@@ -9694,7 +9694,7 @@
                                                                                         </a>
                                                                                     </li>
                                                                                     <li>
-                                                                                        <a href="livecasino.html">
+                                                                                        <a href="week.html">
                                                                                         <img src="assets/img/footer/rightarrow.png" alt="angle"> Live Betting
                                                                                         </a>
                                                                                     </li>
@@ -9805,7 +9805,7 @@
                                                                                     </a>
                                                                                 </li>
                                                                                 <li>
-                                                                                    <a href="livecasino.html">
+                                                                                    <a href="week.html">
                                                                                     <img src="assets/img/footer/rightarrow.png" alt="angle"> All Live Casino
                                                                                     </a>
                                                                                 </li>
