--- a/withdraw.html
+++ b/withdraw.html
@@ -61,7 +61,7 @@
                             </a>
                         </li>
                         <li style="margin-right:40px">
-                            <a href="livecasino.html">
+                            <a href="week.html">
                                 <span>Weekly
                                 </span>
                             </a>
@@ -164,16 +164,7 @@
                                     </span>
                                 </a>
                             </li>
-                            <li>
-                                <a href="bonuses.html">
-                                    <span class="icons">
-                                        <i class="icon-bonus"></i>
-                                    </span>
-                                    <span>
-                                        Bonuses
-                                    </span>
-                                </a>
-                            </li>
+                           
                             <li>
                                 <a href="#0">
                                     <span class="icons">
@@ -285,15 +276,15 @@
         <!--footer Bottom Menu-->
         <ul class="footer__menu d-lg-none">
             <li>
-                <a href="sportsbetting.html" class="d-grid justify-content-center">
+                <a href="index.html" class="d-grid justify-content-center">
                     <span><i class="fas fa-table-tennis"></i></span>
-                    <span class="texta">Sports</span>
+                    <span class="texta">Home</span>
                 </a>
             </li>
             <li>
-                <a href="#0" class="d-grid justify-content-center" data-bs-toggle="modal" data-bs-target="#eventsp">
+                <a href="NFT_Omega.html" class="d-grid justify-content-center">
                     <span><i class="fa-solid fa-gift"></i></span>
-                    <span class="texta">Events</span>
+                    <span class="texta">NFT</span>
                 </a>
             </li>
             <li class="header-bartwo d-lg-none">
@@ -307,13 +298,13 @@
                 </a>
             </li>
             <li>
-                <a href="/" class="d-grid justify-content-center">
+                <a href="/transaction.html" class="d-grid justify-content-center">
                     <span> <i class="far fa-user-circle"></i></span>
-                    <span class="texta"> Account</span>
+                    <span class="texta"> History</span>
                 </a>
             </li>
         </ul>
-        <!--footer Bottom Menu-->
+         <!--footer Bottom Menu-->
     </section>
 
     <footer class="footer__section pt-60">
@@ -390,7 +381,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="livecasino.html">
+                                        <a href="week.html">
                                             <img src="assets/img/footer/rightarrow.png" alt="angle"> Live Games
                                         </a>
                                     </li>
