--- a/notification.html
+++ b/notification.html
@@ -65,7 +65,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="livecasino.html">
+                            <a href="week.html">
                                 <span>Live Casino</span>
                             </a>
                         </li>
@@ -462,7 +462,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="livecasino.html">
+                                    <a href="week.html">
                                     <img src="assets/img/footer/rightarrow.png" alt="angle"> Live Games
                                     </a>
                                 </li>
